fix positioning offset,add links

--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
   <div class="footer-list">
     <div class="left-foot">
       <ul class="first-ul-footer">
-        <li class="title-li">Статті</li>
+        <span class="title-li">Статті</span>
         <li><a href="javascript:void(0)">JavaScript</a></li>
         <li><a href="javascript:void(0)">Linux </a></li>
         <li><a href="javascript:void(0)">CSS</a></li>
@@ -151,7 +151,7 @@
         <li><a href="javascript:void(0)">Java</a></li>
       </ul>
       <ul class="second-ul-footer">
-        <li class="title-li">Цукерочки</li>
+        <span class="title-li">Цукерочки</span>
         <li><a href="javascript:void(0)">JavaScript</a></li>
         <li><a href="javascript:void(0)">Linux</a></li>
         <li><a href="javascript:void(0)">CSS</a></li>
@@ -162,28 +162,38 @@
         <li><a href="javascript:void(0)">Java</a></li>
       </ul>
       <ul class="third-ul-footer">
-        <li class="title-li">Новини</li>
+        <span class="title-li">Новини</span>
         <li><a href="javascript:void(0)">Останні</a></li>
         <li><a href="javascript:void(0)">Популярні</a></li>
         <li><a href="javascript:void(0)">Дайджести</a></li>
       </ul>
     </div>
     <div class="right-foot">
-      <ul class="connection">
-        <li class="title-li">Зв’язок з редакцією</li>
-        <li>Загальні питання</li>
-        <li class="site-mail faq">admin@codeguida.com</li>
-        <li class="cooperation">Співпраця</li>
-        <li class="site-mail">adv@codeguida.com</li>
-      </ul>
-      <ul class="problems">
-        <li class="title-li">Знайшли помилку?</li>
-        <li class="ctrlenter">
-          Знайшли помилку — виділіть в тексті
-          фрагмент з помилкую та нитисніть
-          <span class="site-mail">Ctrl+Enter</span>
-        </li>
-      </ul>
+      <div class="connection">
+        <ul>
+          <span class="title-li">Зв’язок з редакцією</span>
+          <li>Загальні питання</li>
+          <li>
+            <div class="link-mail">
+              <a href="javascript:void(0)">admin@codeguida.com</a>
+            </div>
+          </li>
+          <li class="cooperation">Співпраця</li>
+          <li class="link-mail">
+            <a href="javascript:void(0)">adv@codeguida.com</a>
+          </li>
+        </ul>
+      </div>
+      <div class="problems">
+        <ul>
+          <span class="title-li">Знайшли помилку?</span>
+          <li class="ctrlenter">
+            Знайшли помилку — виділіть в тексті
+            фрагмент з помилкую та нитисніть
+            <span class="site-mail">Ctrl+Enter</span>
+          </li>
+        </ul>
+      </div>
       <div class="copyright">
         <span class="last-footer">
           © 2019 Codeguida.com. При використанні матеріалів зворотнє посилання на сайт обов'язкове
