--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </label>
           <div class="mail-container">
             <input type="email" id="mail" placeholder="Ваш Email">
-            <button type="submit">
+            <button type="button">
               <img src="images/arrowright.svg" alt="arrow-right">
             </button>
           </div>
