#6fix email color footer

--- a/src/index.html
+++ b/src/index.html
@@ -174,13 +174,15 @@
           <span class="title-li">Зв’язок з редакцією</span>
           <li>Загальні питання</li>
           <li>
-            <div class="link-mail">
-              <a href="javascript:void(0)">admin@codeguida.com</a>
-            </div>
+            <a href="javascript:void(0)" class="link-mail">
+              admin@codeguida.com
+            </a>
           </li>
           <li class="cooperation">Співпраця</li>
-          <li class="link-mail">
-            <a href="javascript:void(0)">adv@codeguida.com</a>
+          <li>
+            <a href="javascript:void(0)" class="link-mail">
+              adv@codeguida.com
+            </a>
           </li>
         </ul>
       </div>
