changed top padding

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </p>
         <hr>
         <form class="mail-form">
-          <label for="mail">
+          <label class="header-mail" for="mail">
             Отримуйте першим нові цукерочки
             <img src="images/fire.svg" alt="fire-icon">
           </label>
@@ -172,7 +172,7 @@
       <div class="connection">
         <ul>
           <span class="title-li">Зв’язок з редакцією</span>
-          <li>Загальні питання</li>
+          <li class="question">Загальні питання</li>
           <li>
             <a href="javascript:void(0)" class="link-mail">
               admin@codeguida.com
