changed right blocks

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                 <img src="images/threedots.svg" alt="threedots">
               </a>
             </div>
-            <div class="container_link">
+            <div class="container-link">
               <p class="css-frame">CSS фреймворк та директив від Github</p>
               <button class="link">LINK</button>
             </div>
@@ -96,7 +96,7 @@
                 <img src="images/threedots.svg" alt="threedots">
               </a>
             </div>
-            <div class="container_link">
+            <div class="container-link">
               <p class="css-frame">CSS фреймворк та директив від Github</p>
               <button class="link">LINK</button>
             </div>
@@ -110,7 +110,7 @@
                 <img src="images/threedots.svg" alt="threedots">
               </a>
             </div>
-            <div class="container_link">
+            <div class="container-link">
               <p class="css-frame">CSS фреймворк та директив від Github</p>
               <button class="link">LINK</button>
             </div>
@@ -124,7 +124,7 @@
                 <img src="images/threedots.svg" alt="threedots">
               </a>
             </div>
-            <div class="container_link">
+            <div class="container-link">
               <p class="css-frame">CSS фреймворк та директив від Github</p>
               <button class="link">LINK</button>
             </div>
