#9fixed right block

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,8 @@
               <a href="javascript:void(0)"> <img src="images/java.svg" alt="java"> </a>
             </li>
           </ul>
-          <hr>
+          <div class="nav-hr"> <hr>
+          </div>
         </nav>
         <ul class="list-framework">
           <li>
