added button focus

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,8 @@
             <img src="images/fire.svg" alt="fire-icon">
           </label>
           <div class="mail-container">
-            <input type="email" id="mail" placeholder="Ваш Email">
-            <button type="button">
-              <img src="images/arrowright.svg" alt="arrow-right">
+            <input type="email" placeholder="Ваш email" id="mail">
+            <button type="button" class="button-submit">
             </button>
           </div>
         </form>
@@ -71,7 +70,8 @@
               <a href="javascript:void(0)"> <img src="images/java.svg" alt="java"> </a>
             </li>
           </ul>
-          <div class="nav-hr"> <hr>
+          <div class="nav-hr">
+            <hr>
           </div>
         </nav>
         <ul class="list-framework">
